- Fix spelling error in comments.

PR:		arm/128891
Submitted by:	Pavel Pankov <pankov_p@mail.ru>
Approved by:	kib (mentor)

Former-commit-id: 9bbe2d6ff31819f6b9b2babde03abd3d19facec0